Fix unit tests that fail based on API level. (#2860)